# APEX-DAG

./: .gitignore  README.md  analysis_report.txt  analysis_report_postfix.txt  demo.ipynb  knn_fasttext.ipynb  main.py  notebook_errors.txt  pyproject.toml  requirements.txt  run_experiment.sh  run_watch.sh  setup.py  test.py
ApexDAG/: __init__.py  argparser.py  embedding.py  embedding_model.py  encoder.py  main.py  notebook.py
ApexDAG/annotations/: __init__.py  dynamic.py
ApexDAG/crawl_notebooks/: crawl_and_eval_apexdag.py  notebook_miner.py  notebook_mining_by_library.py  notebook_processor.py  utils.py
ApexDAG/experiments/: analyze_dataset.py  ast_graph_test.py  dataflow_graph.py  finetune.py  hyperparam_optim.py  mine_dataflows.py  pretrain.py  watch.py
ApexDAG/graph-code-bert/: graphcodebert.ipynb
ApexDAG/kb/: KBChangeProposal.py  ProposalMaker.py  README2.md  evaluate_kb.py  propose_changes.py  run_kb_proposals.sh
ApexDAG/label_notebooks/: __main__.py  batch_runner.py  config.yaml  engine.py  eval_labeling_25_02.csv  evaluation_notrbook.ipynb  extractor.py  graph_service.py  label_graph.py  label_graphs.py  labeler.py  llm_policy.py  message_template.py  models.py  online_labeler.py  pydantic_models.py  pydantic_models_multigraph.py  schema.py  token_policy.py  utils.py
ApexDAG/labeler/: edge_labeler.py  gat_labeler.py  heuristics.py  llm_labeler.py
ApexDAG/llm/: gemini_provider.py  llm_provider.py  models.py  resilent_provider.py
ApexDAG/mining/: orchestrator.py  sampler.py  validator.py
ApexDAG/nn/: dataset.py  gat.py  trainer.py
ApexDAG/parser/: ast_parser.py  graph_parser.py  sanitizer_mixin.py
ApexDAG/pipeline/: ast_pipeline.py  ast_pipeline_factory.py  dataflow_pipeline.py  dataflow_pipeline_factory.py  environment_pipeline.py  environment_pipeline_factory.py  labeling_pipeline.py  labeling_pipeline_factory.py  lineage_pipeline.py  lineage_pipeline_factory.py  vamsa_pipeline.py  vamsa_pipeline_factory.py
ApexDAG/prompts/: EdgeClassificationTemplate.py  KBPropagationTemplate.py
ApexDAG/sca/: __init__.py  ast_graph.py  ast_utils.py  complexity_visitor.py  constants.py  graph_refiner.py  graph_utils.py  import_visitor.py  inliner.py  legacy_io.py  models.py  py_ast_graph.py  py_data_flow_graph.py  py_lineage_graph.py  py_util.py
ApexDAG/scripts/: __init__.py  notebook.py
ApexDAG/serializer/: ast_serializer.py  dataflow_serializer.py  environment_serializer.py  labeling_serializer.py  lineage_serializer.py  vamsa_serializer.py
ApexDAG/state/: __init__.py  stack.py  state.py
ApexDAG/util/: dataset_manager.py  draw.py  kaggle_dataset_iterator.py  logger.py  logging.py  networkx_to_pyc.py  notebook_stat_miner.py  training_utils.py
SystemX/: __init__.py  argparser.py  notebook.py
apex-dag-jupyter/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  build.sh  install.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
apex-dag-jupyter/.github/workflows/: build.yml  check-release.yml
apex-dag-jupyter/apex_dag_jupyter/: ASTHandler.py  DataflowHandler.py  EnvironmentHandler.py  LineageHandler.py  __init__.py  config.py  handlers.py
apex-dag-jupyter/apex_dag_jupyter/handler/: ASTHandler.py  ApexDAGBaseHandler.py  ConstantsHandler.py  DataflowHandler.py  EnvironmentHandler.py  LabelingFlagHandler.py  LabelingGenerateHandler.py  LabelingNextHandler.py  LabelingPredictHandler.py  LabelingSaveHandler.py  LineageHandler.py  VamsaHandler.py
apex-dag-jupyter/extension/: .copier-answers.yml  .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package.json  pyproject.toml
apex-dag-jupyter/extension/.github/workflows/: build.yml  check-release.yml
apex-dag-jupyter/extension/apex_dag/: __init__.py
apex-dag-jupyter/extension/jupyterlab_examples_react_widget/labextension/: build_log.json  package.json
apex-dag-jupyter/extension/jupyterlab_examples_react_widget/labextension/static/: lib_index_js.1c50dca4ba82a695f3ac.js  lib_index_js.1c50dca4ba82a695f3ac.js.map  remoteEntry.74c85abacd68e2e408d6.js  remoteEntry.74c85abacd68e2e408d6.js.map  style.js  style_index_js.97d936e3e54947e2bfc0.js  style_index_js.97d936e3e54947e2bfc0.js.map
apex-dag-jupyter/extension/src/: index.ts  widget.tsx
apex-dag-jupyter/extension/style/: base.css
apex-dag-jupyter/jupyter-config/server-config/: apex_dag_server_config.json  jupyterlab_examples_server.json
apex-dag-jupyter/schema/: plugin.json
apex-dag-jupyter/src/: apex_icon.ts  call_backend.ts  graph.tsx  index.ts  widget.tsx
apex-dag-jupyter/src/app/: page.tsx
apex-dag-jupyter/src/app/module/: file_watcher.js  graph.tsx
apex-dag-jupyter/src/components/graph/: Graph.tsx
apex-dag-jupyter/src/components/graph/panels/: EdgeAnnotationPanel.tsx  EdgeDetailsPanel.tsx  GraphLegend.tsx  NodeDetailsPanel.tsx  PanelComponents.tsx
apex-dag-jupyter/src/components/toolbar/: ApexNativeDropdownWidget.ts
apex-dag-jupyter/src/components/widget/: EnvironmentComponent.tsx  EnvironmentWidget.tsx  GraphComponent.tsx  GraphWidget.tsx
apex-dag-jupyter/src/config/: GraphConfig.ts  GraphTheme.ts
apex-dag-jupyter/src/hooks/: useCytoscape.ts  useGraphTaxonomy.ts  useSharedState.ts
apex-dag-jupyter/src/registry/: WidgetRegistry.ts
apex-dag-jupyter/src/settings/: AppSettings.ts
apex-dag-jupyter/src/types/: CommandIDs.ts  GraphComponentProps.ts  GraphTypes.ts  NotebookTypes.ts
apex-dag-jupyter/src/utils/: ApexIcon.ts  ApexIcons.ts  GraphService.ts  callBackend.ts  getNotebookCode.ts  updateEnvironmentWidget.ts  updateLineageWidget.ts  updateWidget.ts
apex-dag-jupyter/style/: Graph.css  GraphComponent.css  base.css  index.css  tailwind-source.css
apex-dag-next/: package-lock.json
demo/: demo.ipynb  demo_blank.ipynb  dfg_inference_script.py
sample_output/: annotation_kb_initial.csv
scripts/: __init__.py  notebook.py
systemx-jupyter/: README.md  RELEASE.md  install.json  package.json  pyproject.toml
tests/: test_argparser.py  test_embedding.py  test_encoder.py  test_notebook.py
(+572 files in other folders)
